--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "channel_identifier": "@JPYC",
   "max_results": 5,
-  "posts_dir": "posts"
+  "posts_dir": "posts",
+  "whisper_model": "small"
 }
